# KroyPata

./: .gitignore  LANDING_PAGE_IMPLEMENTATION.md  LANDING_PAGE_MODERNIZATION.md  LANDING_PAGE_QUICK_GUIDE.md  LANDING_PAGE_USAGE.md  text.txt
backend/: .env  db.sqlite3  pyproject.toml  requirements.txt  test_order_creation.py
backend/backend/: settings.py  urls.py
backend/mediafiles/categories/: download_20.jfif  download_21.jfif  download_23.jfif  images_3.jfif  images_4.jfif
backend/mediafiles/subcategories/: download_24.jfif  download_25.jfif  download_26.jfif  download_29.jfif  download_30.jfif  download_31.jfif  download_32.jfif  download_33.jfif  download_34.jfif  download_35.jfif  download_36.jfif  download_37.jfif  download_38.jfif  download_39.jfif  download_40.jfif  download_41.jfif  download_42.jfif  download_43.jfif  images_6.jfif  images_7.jfif  images_8.jfif
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_payment_status_and_more.py  0004_alter_orderpayment_payment_method.py  (+2 more)
backend/products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/sections/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/shops/: admin.py  models.py  urls.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/utils/: __init__.py  currency.py  image_optimizer.py  middleware.py
backend/website/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: .env.example  .env.local  (+9 more)
(+268 files in other folders)
